crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__one_of_ref_vacuous_discriminator.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$defs\":{\"a\":{\"additionalProperties\":false,\"properties\":{\"k\":{\"const\":\"a\"}},\"required\":[\"k\"]},\"b\":{\"additionalProperties\":false,\"properties\":{\"k\":{\"const\":\"b\"}},\"required\":[\"k\"]}},\"oneOf\":[{\"$ref\":\"#/$defs/a\"},{\"$ref\":\"#/$defs/b\"}]}"
expression: is_valid_body(schema)
---
{
            let __one_of_discriminator = match instance {
                serde_json::Value::Object(obj) => {
                    obj.get("k").and_then(serde_json::Value::as_str)
                }
                _ => None,
            };
            let mut matched = (matches!(__one_of_discriminator, Some("a"))
                && { is_branch_valid_0(instance) });
            (if (matches!(__one_of_discriminator, Some("b"))
                && { is_branch_valid_1(instance) })
            {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }) && matched
        }
