crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__one_of_ref_vacuous_discriminator_validate.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$defs\":{\"a\":{\"additionalProperties\":false,\"properties\":{\"k\":{\"const\":\"a\"}},\"required\":[\"k\"]},\"b\":{\"additionalProperties\":false,\"properties\":{\"k\":{\"const\":\"b\"}},\"required\":[\"k\"]}},\"oneOf\":[{\"$ref\":\"#/$defs/a\"},{\"$ref\":\"#/$defs/b\"}]}"
expression: validate_body(schema)
---
{
            let __one_of_discriminator = match instance {
                __Value::Object(obj) => obj.get("k").and_then(__Value::as_str),
                _ => None,
            };
            let mut __count = 0usize;
            if (matches!(__one_of_discriminator, Some("a"))
                && { is_branch_valid_0(instance) })
            {
                __count += 1;
            }
            if (matches!(__one_of_discriminator, Some("b"))
                && { is_branch_valid_1(instance) })
            {
                __count += 1;
            }
            if !(instance.is_object()) {
                __count += 2usize;
            }
            if __count != 1 {
                let mut __context = Vec::with_capacity(2usize);
                {
                    let mut __branch_errors = Vec::new();
                    collect_branch_errors_0(instance, __path, &mut __branch_errors);
                    __context.push(__branch_errors);
                }
                {
                    let mut __branch_errors = Vec::new();
                    collect_branch_errors_1(instance, __path, &mut __branch_errors);
                    __context.push(__branch_errors);
                }
                return Some(
                    if __count == 0 {
                        __err::one_of_not_valid(
                            "/oneOf",
                            __path.into(),
                            instance,
                            __context,
                        )
                    } else {
                        __err::one_of_multiple_valid(
                            "/oneOf",
                            __path.into(),
                            instance,
                            __context,
                        )
                    },
                );
            }
        }
        None
