crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__one_of_tiebreak_discriminators.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"oneOf\":[{\"properties\":{\"a\":{\"const\":1},\"b\":{\"const\":3}},\"required\":[\"a\",\"b\"],\"type\":\"object\"},{\"properties\":{\"a\":{\"const\":2},\"b\":{\"const\":4}},\"required\":[\"a\",\"b\"],\"type\":\"object\"}]}"
expression: is_valid_body(schema)
---
{
            let __one_of_discriminator = match instance {
                serde_json::Value::Object(obj) => {
                    obj.get("a")
                        .and_then(|value| {
                            value
                                .as_i64()
                                .or_else(|| {
                                    value
                                        .as_f64()
                                        .and_then(|float| {
                                            (float.fract() == 0.0
                                                && float >= -9_223_372_036_854_775_808.0_f64
                                                && float < 9_223_372_036_854_775_808.0_f64)
                                                .then_some(float as i64)
                                        })
                                })
                        })
                }
                _ => None,
            };
            let mut matched = (matches!(__one_of_discriminator, Some(1i64))
                && {
                    match instance {
                        serde_json::Value::Object(obj) => {
                            let mut __req_0 = false;
                            let __object_pass = obj
                                .iter()
                                .all(|(key, instance)| {
                                    match key.as_str() {
                                        "a" => {}
                                        "b" => {
                                            if !({
                                                static EXPECTED: std::sync::LazyLock<serde_json::Number> = std::sync::LazyLock::new(||
                                                {
                                                    serde_json::from_str("3")
                                                        .expect("Failed to parse const number")
                                                });
                                                match instance {
                                                    serde_json::Value::Number(n) => {
                                                        jsonschema::__private::cmp::equal_numbers(n, &*EXPECTED)
                                                    }
                                                    _ => false,
                                                }
                                            }) {
                                                return false;
                                            }
                                            __req_0 = true;
                                        }
                                        _ => {}
                                    }
                                    true
                                });
                            __object_pass && __req_0
                        }
                        _ => false,
                    }
                });
            (if (matches!(__one_of_discriminator, Some(2i64))
                && {
                    match instance {
                        serde_json::Value::Object(obj) => {
                            let mut __req_0 = false;
                            let __object_pass = obj
                                .iter()
                                .all(|(key, instance)| {
                                    match key.as_str() {
                                        "a" => {}
                                        "b" => {
                                            if !({
                                                static EXPECTED: std::sync::LazyLock<serde_json::Number> = std::sync::LazyLock::new(||
                                                {
                                                    serde_json::from_str("4")
                                                        .expect("Failed to parse const number")
                                                });
                                                match instance {
                                                    serde_json::Value::Number(n) => {
                                                        jsonschema::__private::cmp::equal_numbers(n, &*EXPECTED)
                                                    }
                                                    _ => false,
                                                }
                                            }) {
                                                return false;
                                            }
                                            __req_0 = true;
                                        }
                                        _ => {}
                                    }
                                    true
                                });
                            __object_pass && __req_0
                        }
                        _ => false,
                    }
                })
            {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }) && matched
        }
