crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__one_of_typed_discriminator_validate.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"oneOf\":[{\"properties\":{\"kind\":{\"const\":\"circle\"},\"radius\":{\"type\":\"number\"}},\"required\":[\"kind\"],\"type\":\"object\"},{\"properties\":{\"kind\":{\"const\":\"square\"},\"side\":{\"type\":\"number\"}},\"required\":[\"kind\"],\"type\":\"object\"}]}"
expression: validate_body(schema)
---
{
            let __one_of_discriminator = match instance {
                serde_json::Value::Object(obj) => {
                    obj.get("kind").and_then(serde_json::Value::as_str)
                }
                _ => None,
            };
            let mut __count = 0usize;
            if (matches!(__one_of_discriminator, Some("circle"))
                && { is_branch_valid_0(instance) })
            {
                __count += 1;
            }
            if (matches!(__one_of_discriminator, Some("square"))
                && { is_branch_valid_1(instance) })
            {
                __count += 1;
            }
            if __count != 1 {
                let mut __context = Vec::with_capacity(2usize);
                {
                    let mut __branch_errors = Vec::new();
                    collect_branch_errors_0(instance, __path, &mut __branch_errors);
                    __context.push(__branch_errors);
                }
                {
                    let mut __branch_errors = Vec::new();
                    collect_branch_errors_1(instance, __path, &mut __branch_errors);
                    __context.push(__branch_errors);
                }
                return Some(
                    if __count == 0 {
                        jsonschema::__private::error::one_of_not_valid(
                            "/oneOf",
                            __path.into(),
                            instance,
                            __context,
                        )
                    } else {
                        jsonschema::__private::error::one_of_multiple_valid(
                            "/oneOf",
                            __path.into(),
                            instance,
                            __context,
                        )
                    },
                );
            }
        }
        None
