crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__one_of_typed_with_null_branch_validate.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"oneOf\":[{\"type\":\"null\"},{\"properties\":{\"kind\":{\"const\":\"circle\"}},\"required\":[\"kind\"],\"type\":\"object\"},{\"properties\":{\"kind\":{\"const\":\"square\"}},\"required\":[\"kind\"],\"type\":\"object\"}]}"
expression: validate_body(schema)
---
{
            let __one_of_discriminator = match instance {
                serde_json::Value::Object(obj) => {
                    obj.get("kind").and_then(serde_json::Value::as_str)
                }
                _ => None,
            };
            let mut __count = 0usize;
            if instance.is_null() {
                __count += 1;
            }
            if (matches!(__one_of_discriminator, Some("circle"))
                && {
                    match instance {
                        serde_json::Value::Object(obj) => true,
                        _ => false,
                    }
                })
            {
                __count += 1;
            }
            if (matches!(__one_of_discriminator, Some("square"))
                && {
                    match instance {
                        serde_json::Value::Object(obj) => true,
                        _ => false,
                    }
                })
            {
                __count += 1;
            }
            if __count == 0 {
                return Some(
                    jsonschema::__private::error::one_of_not_valid(
                        "/oneOf",
                        __path.into(),
                        instance,
                    ),
                );
            }
            if __count > 1 {
                return Some(
                    jsonschema::__private::error::one_of_multiple_valid(
                        "/oneOf",
                        __path.into(),
                        instance,
                    ),
                );
            }
        }
        None
