crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__one_of_vacuous_uncovered_branch_not_guarded.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"oneOf\":[{\"properties\":{\"k\":{\"const\":\"a\"}},\"required\":[\"k\"]},{\"properties\":{\"k\":{\"const\":\"b\"}},\"required\":[\"k\"]},{\"properties\":{\"z\":{\"type\":\"integer\"}}}]}"
expression: is_valid_body(schema)
---
{
            let mut matched = match instance {
                serde_json::Value::Object(obj) => {
                    let mut __req_0 = false;
                    let __object_pass = obj
                        .iter()
                        .all(|(key, instance)| {
                            match key.as_str() {
                                "k" => {
                                    if !(instance.as_str() == Some("a")) {
                                        return false;
                                    }
                                    __req_0 = true;
                                }
                                _ => {}
                            }
                            true
                        });
                    __object_pass && __req_0
                }
                _ => true,
            };
            (if match instance {
                serde_json::Value::Object(obj) => {
                    let mut __req_0 = false;
                    let __object_pass = obj
                        .iter()
                        .all(|(key, instance)| {
                            match key.as_str() {
                                "k" => {
                                    if !(instance.as_str() == Some("b")) {
                                        return false;
                                    }
                                    __req_0 = true;
                                }
                                _ => {}
                            }
                            true
                        });
                    __object_pass && __req_0
                }
                _ => true,
            } {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }
                && if match instance {
                    serde_json::Value::Object(obj) => {
                        obj.iter()
                            .all(|(key, instance)| {
                                let key_str = key.as_str();
                                match key_str {
                                    "z" => {
                                        match instance {
                                            serde_json::Value::Number(n) => {
                                                jsonschema::__private::types::is_integer(n)
                                            }
                                            _ => false,
                                        }
                                    }
                                    _ => true,
                                }
                            })
                    }
                    _ => true,
                } {
                    if matched {
                        false
                    } else {
                        matched = true;
                        true
                    }
                } else {
                    true
                }) && matched
        }
