crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__pattern.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"pattern\":\"^[a-z]+$\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::String(s) => {
                __jsonschema_regex_0(
                    s,
                    || __unfinished::schema_site("/pattern", Some("^[a-z]+$")),
                )
            }
            _ => false,
        }
